# errbot

./: .codeclimate.yml  .dockerignore  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES-4x.rst  CHANGES-5x.rst  CHANGES-pre-v4.rst  CHANGES.rst  Dockerfile  MANIFEST.in  PREVIOUS-CHANGES.rst  README.rst  botplugin.py  config-template.py  conftest.py  dark_humour  err.py  err.sh  errBot.py  gplv3-exceptions.txt  holder.py  imgs  jabberbot.py  plugin_manager.py  pylock.toml  pyproject.toml  pytest.ini  repos.py  requirements-development.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  snapcraft.yaml  tox.ini  (+2 more)
.github/: ISSUE_TEMPLATE.md  renovate.json
builtins/: __init__.py  chatRoom.py
changes.d/: 20251014_100000_core_plugins.rst  20251014_100001_importlib.rst  20251014_100002_dockerfile.rst  20251014_100003_unreleased_section.rst  20251014_100004_jinja.rst  20251014_100005_telegram_docs.rst  20251014_100006_type_hints.rst  20251014_100007_python_versions.rst  20251014_100008_ruff.rst  20251014_100009_python38.rst  20251014_100010_setuptools.rst  20251014_100011_pyopenssl.rst  20251014_100012_apropos.rst  20251014_100013_jinja_requests.rst  20251014_100014_requests.rst  20251014_100015_botcmd_args.rst  20251014_100016_jinja2.rst  20251014_100017_thread_pools.rst  20251014_100018_slackv3.rst  20251014_100019_fullstacktest.rst  20251014_100020_plugin_config.rst  20251014_100021_threaded_replies.rst  20251014_100022_tar_extract.rst  20251014_100023_py313_tox.rst  20251014_100024_setuptools2.rst  20251014_100025_tox_urls.rst  20251014_100026_checkout_versions.rst  20251014_100027_setup_python_versions.rst  README.rst  scriv.ini
docs/: Makefile  README.rst  conf.py  contributing.rst  features.rst  index.rst  modules.rst  plugindevelopment.rst  requirements.txt
errbot/: __init__.py  backend_manager.py  backend_plugin_manager.py  bootstrap.py  botplugin.py  cli.py  config-template.py  config-travisci.py  config.py.jinja2  core.py  debug.py  decorators.py  err.py  errBot.py  errbot.py  exceptions.py  flow.py  graphicmode.py  holder.py  jabberbot.py  logs.py  main.py  pid.py  plugin_info.py  plugin_manager.py  plugin_wizard.py  py2conv.py  repo_manager.py  repos.py  specific_plugin_manager.py  storage.py  streaming.py  templating.py  testmode.py  utils.py  version.py
legacy/: README.md  setup.py
scripts/: err-setup  err.py  err.sh  errbot-setup-config.py  generate-selfsigned-sslcertificate.py  initscript.debian7
tests/: __init__.py  backend_manager_test.py  backend_manager_tests.py  base_backend_test.py  base_backend_tests.py  cascade_dependencies_test.py  (+51 more)
(+338 files in other folders)
